Add instructions for using Java 11+ in README
Based on the comments in #58 and #63 running the jar is not straightforward with newer Java versions since JavaFX is not included automatically. Updated instructions to include the flags to run it so users don't need to dig through closed issues.